# glass-extension

./: LICENSE  LICENSE.txt  README.rst  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
glass/: extension.py
