[metadata]
name = glass-extension
version = attr: glass.extension.__version__
author = Author Name
author_email = author@example.com
description = GLASS package for extension
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
url = https://github.com/astro-ph/glass-extension
project_urls =
    Issues = https://github.com/astro-ph/glass-extension/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy
    glass>=2022.3.13
packages = glass

[options.extras_require]
test =
    pytest

[tool:pytest]
addopts = --doctest-modules

[flake8]
ignore = E226,E501,E741
